fix z-index, translate modal, ranges eventand arrow fixes

--- a/calendar.scss
+++ b/calendar.scss
@@ -19,6 +19,7 @@ $cloud: #ecf0f1;
 			border-radius: 0;
 		}
 		& .dt-modal_wrapper {
+			z-index: 200;
 			left: 0;
 			right: 0;
 			top: 0;
@@ -29,11 +30,10 @@ $cloud: #ecf0f1;
 	}
 	//Modal mode
 	&-modal {
-
 		& .dt__wrapper {
 			left: 50%;
 		    top: 50%;
-			transform: translate(-50%, -50%);
+			transform: translate(-50%, -260px);
 		    box-shadow: 0px 0px 20px rgba(0,0,0,0.35);
 		}
 		&_wrapper {
@@ -149,7 +149,6 @@ $cloud: #ecf0f1;
 		overflow: hidden;
 		border-radius: 30%;
 		box-shadow: 1px 2px 8px rgba(0,0,0,0.15);
-		transition: all 0.3s ease;
 		&.rangedate {
 			min-width: 571px;
 			.dt__calendar:first-child {
@@ -234,7 +233,7 @@ $cloud: #ecf0f1;
 				line-height: 30px;
 				& > span {
 					display: inline-block;
-					min-width: 70px;
+					min-width: 100px;
 				}
 			}
 			&_day {
@@ -250,6 +249,10 @@ $cloud: #ecf0f1;
 				display: block;
 				height: 20px;
 				line-height: 20px;
+				& > span {
+					display: inline-block;
+					min-width: 100px;
+				}
 			}
 			.next, .prev {
 				display: inline-block;
